--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 *{padding: 0; margin: 0; box-sizing: border-box;}
 
-.section--books {
+.books {
     width: 95%;
     margin: 10px auto;
     display: flex;
 }
 
-.section--books .section__item {
+.books .books__item{
     width: 50%;
     height: 80%;
     position: relative;
@@ -16,7 +16,7 @@
     gap: 20px;
 }
 
-.section__item-title {
+.books__title {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
     font-size: 18px;
@@ -27,12 +27,12 @@
     margin-top: 10px;
 }
 
-.section__item-title--link {
+.books__title-link {
     color: #4054F9;
     text-decoration: none;
 }
 
-.section__item-text {
+.books__text {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
     font-size: 14px;
@@ -42,20 +42,20 @@
     color: #4F4F4F;
 }
 
-.section__item-text .item-text--bold {
+.books__text .books__text-bold {
     font-weight: 600;
 }
 
-.section__first-item {
+.books__item--first{
     border-right: 1px solid #E3E3E3;
 }
 
-.section__item-buttons {
+.books__buttons {
     display: flex;
     gap: 20px;
 }
 
-.section__first-item .section__item-buttons .section__item-btn {
+.books__buttons .books__btn {
     width: 190px;
     height: 40px;
     border: none;
@@ -72,18 +72,18 @@
     cursor: pointer;
 }
 
-.section__item-buttons .section__item-btn:nth-child(1) {
+.books__buttons .books__btn:nth-child(1) {
     color: #FFF;
     background: #4054F9;
 }
 
-.section__item-buttons .section__item-btn:nth-child(2) {
+.books__buttons .books__btn:nth-child(2) {
     background: #FFF;
     color: #4054F9;
     border: 1px solid #4054F9;
 }
 
-.section__first-item::after {
+.books__item--first::after {
     content: '';
     position: absolute;
     width: 250px;
@@ -93,11 +93,11 @@
     background: url('../img/section-tablet-img.png') left top / cover no-repeat;
 }
 
-.section__item.section__second-item {
+.books__item.books__item--second {
     padding-left: 90px;
 }
 
-.section__item.section__second-item .section__item-btn {
+.books__item.books__item--second .books__buttons .books__btn {
     width: 223px;
     height: 40px;
     border: none;
@@ -115,7 +115,7 @@
     cursor: pointer;
 }
 
-.section__second-item::after {
+.books__item.books__item--second::after {
     content: '';
     position: absolute;
     width: 200px;
@@ -125,7 +125,7 @@
     background: url('../img/section-book-img.png') center center / cover no-repeat;
 }
 
-.header.header__menu {
+.header {
     width: 100%;
     height: 64px;
     position: relative;
@@ -137,7 +137,7 @@
     margin-top: 20px;
 }
 
-.menu__burger-btn {
+.header__burger {
     width: 24px;
     height: 24px;
     position: absolute;
@@ -152,7 +152,7 @@
     cursor: pointer;
 }
 
-.menu__burger-btn span {
+.header__burger span {
     width: 18px;
     height: 2px;
     border-radius: 2px;
@@ -173,11 +173,11 @@
     text-decoration: none;
 }
 
-.header__title--link {
+.header__title-sub {
     color: #ECC330;
 }
 
-.header__menu .search__bar {
+.header .search {
     width: 30rem;
     height: 40px;
     border-radius: 4px;
@@ -188,7 +188,7 @@
     padding: 0 15px 0 20px;
 }
 
-.search__bar .search__input {
+.search .search__input {
     border: none;
     outline: none;
     width: 90%;
@@ -202,28 +202,28 @@
     background: transparent;
 }
 
-.search__bar .search__input::-webkit-input-placeholder {
+.search .search__input::-webkit-input-placeholder {
     color: #A4A4A4;
 }
 
-.search__bar .search__btn {
+.search .search__btn {
     cursor: pointer;
     background: transparent;
     border: none;
 }
 
-.header__web-socials {
+.header .socials{
     display: flex;
     gap: 10px;
 }
 
-.header__web-socials .web__social-btn {
+.header .socials .socials__btn {
     background: transparent;
     border: none;
     cursor: pointer;
 }
 
-.header__public-btn {
+.header__publish {
     width: 181px;
     height: 40px;
     background: #4054F9;
@@ -240,7 +240,7 @@
     cursor: pointer;
 }
 
-.search__btn-mobile {
+.header__search-mobile {
     width: 18px;
     height: 18px;
     display: none;
@@ -263,19 +263,19 @@
     border: none;
 }
 
-.header__account-btn .account__img--circle {
+.header__account-btn .account__avatar {
     width: 30px;
     height: 30px;
     border-radius: 50%;
     background: url("../img/account-img.jpg") center center / cover no-repeat;
 }
 
-.header__account-btn .account__bottom-arrow {
+.header__account-btn .account__arrow {
     width: 6px;
     height: 3px;
 }
 
-.section__menu-bar {
+.menu-bar {
     width: 100%;
     height: 60px;
     display: flex;
@@ -286,16 +286,16 @@
     background: #F6F6F6;
 }
 
-.section__menu-bar .menu__list {
+.menu-bar .menu-bar__list{
     display: flex;
     gap: 20px;
 }
 
-.menu__list .menu__item {
+.menu-bar__list .menu-bar__item {
     list-style: none;
 }
 
-.menu__item .menu__item--link {
+.menu-bar__item .menu-bar__link {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
     font-size: 15px;
@@ -306,7 +306,7 @@
     text-decoration: none;
 }
 
-.menu__see-more-text {
+.menu-bar__more {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
     font-size: 12px;
@@ -1455,15 +1455,15 @@
 }
 
 @media (min-width: 2300px) {
-    .section--books {
+    .books {
         padding: 0 10%;
     }
 
-    .header.header__menu {
+    .header {
         padding: 0 10%;
     }
 
-    .section__menu-bar {
+    .menu-bar {
         padding: 0 10%;
     }
 
@@ -1482,11 +1482,11 @@
 }
 
 @media (max-width: 1024px) {
-    .section--books {
+    .books {
         display: none;
     }
 
-    .header.header__menu {
+    .header {
         margin-top: 0;
         justify-content: space-between;
         padding-left: 100px;
@@ -1496,7 +1496,7 @@
         display: none;
     }
 
-    .header__web-socials {
+    .header .socials {
         display: none;
     }
     
@@ -1504,7 +1504,7 @@
         display: flex;
     }
 
-    .header__menu .search__bar {
+    .header .search {
         width: 20rem;
     }
 
@@ -1512,7 +1512,7 @@
         background: #FFF;
     }
 
-    .section__menu-bar .menu__list .menu__item--hidden {
+    .menu-bar .menu-bar__list .menu-bar__item--hidden {
         display: none;
     }
 
@@ -1657,19 +1657,23 @@
 
 @media (max-width: 767px) {
 
-    .header.header__menu {
+    .header {
         justify-content: unset;
     }
 
-    .header__menu .search__bar {
+    .header__burger {
+        display: flex;
+    }
+
+    .header .search {
         display: none;
     }
 
-    .header__public-btn {
+    .header__publish {
         display: none;
     }
 
-    .search__btn-mobile {
+    .header__search-mobile {
         display: flex;
         position: absolute;
         right: 90px;
@@ -1680,7 +1684,7 @@
         right: -20px;
     }
 
-    .section__menu-bar {
+    .menu-bar {
         display: none;
     }
 
